--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>Image Upload</h1>
+    <h1>Color Detector</h1>
     <form method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="image">
         <input type="submit" value="Upload">
